# rs-deep

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  prelude.rs
src/dlfs01/: mod.rs
src/dlfs01/ch01/: hungry.rs  img_show.rs  man.rs  mod.rs  sin_cos_graph.rs  sin_graph.rs  single_graph.rs
src/dlfs01/ch02/: gates.rs  mod.rs
src/dlfs01/ch03/: activation.rs  mod.rs
src/dlfs01/ch04/: gradient_1d.rs  gradient_2d.rs  gradient_method.rs  gradient_simple_net.rs  mod.rs  train_neural_net.rs  two_layer_net.rs
src/dlfs01/ch05/: buy_apple.rs  buy_apple_orange.rs  layer_naive.rs  mod.rs  train_neural_net.rs  two_layer_net.rs
src/dlfs01/ch06/: batch_norm_test.rs  mod.rs  optimizer_compare_mnist.rs  overfit_dropout.rs  overfit_weight_decay.rs  weight_init_compare.rs
src/dlfs01/ch07/: mod.rs  train_convnet.rs
src/dlfs01/common/: choice.rs  choice_ndarray.rs  functions.rs  gradient.rs  layers.rs  loss_function.rs  math.rs  math_ndarray.rs  mod.rs  ndarray_enum.rs  operators.rs  util.rs
src/dlfs01/common/layers/: activation.rs  affine.rs  base.rs  batch_normalization.rs  convolution.rs  dropout.rs  layer_base.rs  mod.rs  pooling.rs  softmax_with_loss.rs
src/dlfs01/common/models/: mlp.rs  mod.rs  model_base.rs  model_params.rs  sequential.rs
src/dlfs01/common/ndarray_ext/: mod.rs  ndarray_dot.rs  ndarray_ops.rs
src/dlfs01/common/optimizers/: mod.rs  optimizer.rs  optimizer_base.rs  sgd.rs
src/dlfs01/dataset/: mnist.rs  mnist_vec.rs  mod.rs
src/dlfs01/examples/: mod.rs  train_mlp_test.rs
tests/: integration_test.rs
(+5 files in other folders)
