[package]
name = "rs-deep"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cast = "0.2.3"
itertools = "0.9.0"
ndarray = "0.13.1"
ndarray-stats = "0.3.0"
num-traits = "0.2.14"
plotters = "0.3.0"
rand = "0.7.3"
thiserror = "1.0"
