[package]
name = "rs-deep"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cast = "0.3.0"
itertools = "0.13.0"
ndarray = { version = "0.13.1", features = ["serde"] }
ndarray-rand = "0.11.0"
ndarray-stats = "0.3.0"
num-traits = "0.2.14"
plotters = "0.3.0"
rand = "0.7.3"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.61"
thiserror = "1.0"
